src/test/resources/negative/EmptyModule.java
import net.nokok.draft.Module;

@Module
interface Empty {
    
}